# DSCI-310-Group-9-

./: CODE_OF_CONDUCT  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Data Analysis.ipynb  Dockerfile  LICENSE.md  Makefile  README.md  Team_Work_Contract.md  car_analysis.ipynb  rm_null.py  test_rm_null.py
.github/workflows/: build_image.yml
.ipynb_checkpoints/: Data Analysis-checkpoint.ipynb  Dockerfile-checkpoint  car_analysis-checkpoint.ipynb
.virtual_documents/: Data Analysis.ipynb  car_analysis.ipynb
.virtual_documents/src/: car_analysis.ipynb
We welcome all contributions to this project!  If you notice a bug, or have a feature request,  please open up an issue [here](https:/github.com/UBC-DSCI/REPOSITORY_NAME/: CONTRIBUTING.md
doc/: car_analysis.Rmd  car_analysis.html  references.bib
src/: build_coef_dataframe.py  car_analysis.ipynb  clean_car_data.py  feature_coeff_table.py  features.py  model_car_data.py  process_cleaned_car_data.py  rm_null.py  visualize_car_data.py  visualize_coefficients.py
src/.ipynb_checkpoints/: car_analysis-checkpoint.ipynb  features-checkpoint.py
src/car_analysis/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  car_analysis.py  pyproject.toml
src/car_analysis/docs/: Makefile  conf.py  example.ipynb  make.bat
src/car_analysis/src/car_analysis/: __init__.py
src/car_analysis/tests/: test_car_analysis.py
tests/: test_car.py  test_rm_null.py
tests/pytest/: helper_visualize_coefficients.py  test-visualize_coefficients.py  test_feature_coeff_table.py  test_features.py  test_rm_null.py  test_visualize_coefficients.py
