[tool.poetry]
name = "car_analysis"
version = "0.1.0"
description = "A package for functions used in car_analysis.ipynb project "
authors = ["Allan Cho, Fred Zhang, Ayasha Abdalla, Zhe Li"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.5.1"
numpy = ">=1.22.3"
pandas = ">=1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
